--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "private": true,
   "type": "module",
   "dependencies": {
+    "@coral-xyz/anchor": "^0.32.1",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
@@ -42,13 +43,15 @@
     "@wallet-ui/react": "2.0.0",
     "@wallet-ui/react-gill": "2.0.0",
     "@wallet-ui/tailwind": "2.0.0",
+    "assert": "^2.1.0",
+    "bn.js": "^5.2.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "codama": "^1.3.3",
     "gill": "0.11.0",
     "jotai": "^2.14.0",
     "lucide-react": "^0.544.0",
-    "next": "15.5.7",
+    "next": "^15.5.9",
     "next-themes": "^0.4.6",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
@@ -68,7 +71,7 @@
     "@types/react-dom": "^19.1.9",
     "eslint": "^9.35.0",
     "eslint-config-next": "15.5.6",
-    "esrun": "^3.2.30",
+    "esrun": "^0.0.1",
     "prettier": "^3.6.2",
     "tailwindcss": "^4.1.13",
     "typescript": "^5.9.2",
